--- a/anime2.html
+++ b/anime2.html
@@ -575,7 +575,7 @@
           <div class="error">
             <h2>Error Loading Content</h2>
             <p>There was an issue loading the anime details. Please try again later.</p>
-            <a href="index.html" class="back-btn" style="display: inline-block; margin-top: 20px;">
+            <a href="anime1.html" class="back-btn" style="display: inline-block; margin-top: 20px;">
               <i class="fas fa-arrow-left"></i> Back to Home
             </a>
           </div>
@@ -585,7 +585,7 @@
     function play(title, episode) {
       const encodedTitle = encodeURIComponent(title);
       const encodedEp = encodeURIComponent(episode);
-      window.location.href = `player.html?title=${encodedTitle}&ep=${encodedEp}`;
+      window.location.href = `player1.html?title=${encodedTitle}&ep=${encodedEp}`;
     }
   </script>
 </body>
