--- a/anime1.html
+++ b/anime1.html
@@ -980,7 +980,7 @@
 
         card.onclick = () => {
           const titleParam = encodeURIComponent(anime.anime_name);
-          window.location.href = `anime.html?title=${titleParam}`;
+          window.location.href = `anime2.html?title=${titleParam}`;
         };
 
         container.appendChild(card);
@@ -1108,7 +1108,7 @@
 
         card.onclick = () => {
           const titleParam = encodeURIComponent(anime.anime_name);
-          window.location.href = `anime.html?title=${titleParam}`;
+          window.location.href = `anime2.html?title=${titleParam}`;
         };
 
         allAnimeContainer.appendChild(card);
