--- a/anime2.html
+++ b/anime2.html
@@ -475,7 +475,7 @@
             <div class="error">
               <h2>Anime not found</h2>
               <p>Could not find "${title}" in our database</p>
-              <a href="index.html" class="back-btn" style="display: inline-block; margin-top: 20px;">
+              <a href="anime1.html" class="back-btn" style="display: inline-block; margin-top: 20px;">
                 <i class="fas fa-arrow-left"></i> Back to Home
               </a>
             </div>
